--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,11 @@ arch: amd64
 dist: jammy        # Ubuntu 22.04
 group: dev
 
-# Cache npm to speed up builds
+# Cache npm to speed up builds (you can disable it if you suspect cache corruption)
 cache:
   directories:
     - ~/.npm
+# cache: false  # uncomment to disable cache entirely
 
 # Git shallow clone for faster fetch
 git:
@@ -17,11 +18,25 @@ git:
   quiet: true
   submodules: false
 
-install:
-  - npm install      # Use npm install instead of the default npm ci
-
 before_install:
-  - npm config set loglevel verbose
+  # 1) turn on the most verbose npm output
+  - npm config set loglevel silly
+
+  # 2) adjust retry/timeouts in case of flaky network
+  - npm config set fetch-retries 5
+  - npm config set fetch-retry-mintimeout 20000
+  - npm config set fetch-retry-maxtimeout 120000
+
+  # 3) network diagnostics for codeload.github.com to catch DNS / routing issues
+  - ping -c 4 codeload.github.com || true
+  - traceroute codeload.github.com || true
+
+install:
+  # wrap npm install in travis_wait so we get longer before “no output” kill,
+  # and tee the full verbose log for post-mortem
+  - travis_wait 20 bash -lc "npm install --loglevel=silly 2>&1 | tee npm-install.log"
 
 script:
   - echo "npm install completed successfully"
+  # optionally show last lines of the install log for quick inspection
+  - tail -n 30 npm-install.log || true
