--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,19 @@
-node_js:
-  - 20.9
 os: linux
 arch: amd64
-dist: jammy
-group: dev
+dist: jammy        # Ubuntu 22.04
 
 cache:
   directories:
     - ~/.npm
+
 git:
   depth: 1
   quiet: true
   submodules: false
 
 before_install:
+  - npm config set loglevel verbose
+  - npm install --verbose
 
-install:
-  - npm install
 script:
   - echo "npm install completed successfully"
