--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-language: node_js         # LTS version
 os: linux
 arch: amd64
 dist: jammy        # Ubuntu 22.04
@@ -13,6 +12,7 @@ git:
   submodules: false
 
 before_install:
+  - node -v
   - npm config set loglevel verbose
   - npm install --verbose
 
