--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+language: node_js
+node_js:
+  - 20.9             # LTS version
 os: linux
 arch: amd64
 dist: jammy        # Ubuntu 22.04
@@ -12,6 +15,8 @@ git:
   submodules: false
 
 before_install:
+  - npm --verions
+  - npm install -g npm@latest
   - npm --version
   - node --version
   - nvm --version
