--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: node_js
 node_js:
-  - 21.0        # LTS version
+  - 20.9        # LTS version
 os: linux
 arch: amd64
 dist: jammy        # Ubuntu 22.04
+group: dev
 
 cache:
   directories:
