test elastic search 10

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ group: dev
 services:
   - elasticserach
 before_install:
-  - 'sudo sed -i "s/enabled: true/enabled: false/g" /etc/elasticsearch/elasticsearch.yml'
+  - cat /etc/elasticsearch/elasticsearch.yml
   - sudo systemctl restart elasticsearch
   - sleep 30
   - until curl --silent -XGET --fail http://localhost:9200/_cluster/health?pretty; do printf '...\n'; sleep 2; done
