--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ group: dev
 services:
   - elasticsearch  
 before_install:
+  - sudo cat /etc/elasticsearch/elasticsearch.yml
   - sleep 30
   - until curl --silent -XGET --fail http://localhost:9200/_cluster/health?pretty; do printf '...\n'; sleep 2; done
 install: skip
