--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,6 @@ before_install:
   - sudo systemctl restart elasticsearch
   - sleep 30
   - until curl --silent -XGET --fail http://localhost:9200/_cluster/health?pretty; do printf '...\n'; sleep 2; done
+  - sudo cat /etc/elasticsearch/elasticsearch.yml
 install: skip
 script: true
