--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,13 @@
 language: shell
 dist: jammy
+group: dev
 
 services:
   - elasticsearch  
 
 before_install:
-  - 'sudo sed -i "s/enabled: true/enabled: false/g" /etc/elasticsearch/elasticsearch.yml'
   - sudo systemctl restart elasticsearch
   - sleep 30
   - until curl --silent -XGET --fail http://localhost:9200/_cluster/health?pretty; do printf '...\n'; sleep 2; done
-  - sudo cat /etc/elasticsearch/elasticsearch.yml
 install: skip
 script: true
