--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ services:
   - elasticsearch  
 
 before_install:
-  - until curl --silent -XGET --fail http://localhost:9200/_cluster/health?pretty; do printf '...\n'; sleep 2; done
+  - until curl --silent -XGET --fail https://localhost:9200/_cluster/health?pretty; do printf '...\n'; sleep 2; done
 install: skip
 script: true
