--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,64 @@ services:
   - elasticsearch  
 
 before_install:
+  # Zwiększenie limitu map dla Elasticsearch (krytyczne dla działania)
+  - sudo sysctl -w vm.max_map_count=262144
+  
+  # Sprawdzenie JVM options i dostosowanie limitów pamięci
+  - sudo cat /etc/elasticsearch/jvm.options
+  - |
+    sudo bash -c 'cat > /etc/elasticsearch/jvm.options.d/memory.options << EOL
+    -Xms512m
+    -Xmx512m
+    EOL'
+  
+  # Sprawdzenie i dostosowanie konfiguracji
+  - sudo cat /etc/elasticsearch/elasticsearch.yml
+  - |
+    sudo bash -c 'cat > /etc/elasticsearch/elasticsearch.yml << EOL
+    # Minimal Elasticsearch configuration for Travis CI
+    cluster.name: travis-elasticsearch
+    node.name: travis-elasticsearch-node
+    
+    # Network settings
+    network.host: 127.0.0.1
+    http.port: 9200
+    
+    # Discovery
+    discovery.type: single-node
+    
+    # Disable security features
+    xpack.security.enabled: false
+    
+    # Basic settings
+    http.cors.enabled: true
+    http.cors.allow-origin: "*"
+    EOL'
+  
+  # Sprawdzenie uprawnień katalogów
+  - sudo ls -la /var/lib/elasticsearch
+  - sudo ls -la /var/log/elasticsearch
+  
+  # Naprawienie uprawnień
+  - sudo chown -R elasticsearch:elasticsearch /var/lib/elasticsearch
+  - sudo chown -R elasticsearch:elasticsearch /var/log/elasticsearch
+  
+  # Restart usługi
+  - sudo systemctl daemon-reload
+  - sudo systemctl restart elasticsearch
+  
+  # Sprawdzenie logów
+  - sleep 5
+  - sudo cat /var/log/elasticsearch/travis-elasticsearch.log || true
+  
+  # Sprawdzenie statusu
   - sudo systemctl status elasticsearch || true
-  - sudo journalctl -xeu elasticsearch.service || true
-  - until curl --silent -XGET --fail http://localhost:9200/_cluster/health?pretty; do printf '...\n'; sleep 2; done
+  
+  # Oczekiwanie na uruchomienie (HTTP zamiast HTTPS)
+  - timeout 30 bash -c 'until curl --silent -XGET --fail http://localhost:9200/_cluster/health?pretty; do printf ".\n"; sleep 3; done' || echo "Timeout podczas oczekiwania na Elasticsearch"
 
 install: skip
 
 script:
+  # Sprawdzenie czy Elasticsearch działa poprawnie
   - curl -s http://localhost:9200
-  - curl -s http://localhost:9200/_cluster/health?pretty
