--- a/.travis.yml
+++ b/.travis.yml
@@ -6,60 +6,147 @@ services:
   - elasticsearch  
 
 before_install:
+  # Najpierw tworzymy dokładną kopię pliku elasticsearch.yml
+  - |
+    sudo bash -c "cat > /etc/elasticsearch/elasticsearch.yml << 'EOL'
+# ======================== Elasticsearch Configuration =========================
+#
+# NOTE: Elasticsearch comes with reasonable defaults for most settings.
+#       Before you set out to tweak and tune the configuration, make sure you
+#       understand what are you trying to accomplish and the consequences.
+#
+# The primary way of configuring a node is via this file. This template lists
+# the most important settings you may want to configure for a production cluster.
+#
+# Please consult the documentation for further information on configuration options:
+# https://www.elastic.co/guide/en/elasticsearch/reference/index.html
+#
+# ---------------------------------- Cluster -----------------------------------
+#
+# Use a descriptive name for your cluster:
+#
+#cluster.name: my-application
+#
+# ------------------------------------ Node ------------------------------------
+#
+# Use a descriptive name for the node:
+#
+#node.name: node-1
+#
+# Add custom attributes to the node:
+#
+#node.attr.rack: r1
+#
+# ----------------------------------- Paths ------------------------------------
+#
+# Path to directory where to store the data (separate multiple locations by comma):
+#
+path.data: /var/lib/elasticsearch
+#
+# Path to log files:
+#
+path.logs: /var/log/elasticsearch
+#
+# ----------------------------------- Memory -----------------------------------
+#
+# Lock the memory on startup:
+#
+#bootstrap.memory_lock: true
+#
+# Make sure that the heap size is set to about half the memory available
+# on the system and that the owner of the process is allowed to use this
+# limit.
+#
+# Elasticsearch performs poorly when the system is swapping the memory.
+#
+# ---------------------------------- Network -----------------------------------
+#
+# By default Elasticsearch is only accessible on localhost. Set a different
+# address here to expose this node on the network:
+#
+#network.host: 192.168.0.1
+#
+# By default Elasticsearch listens for HTTP traffic on the first free port it
+# finds starting at 9200. Set a specific HTTP port here:
+#
+#http.port: 9200
+#
+# For more information, consult the network module documentation.
+#
+# --------------------------------- Discovery ----------------------------------
+#
+# Pass an initial list of hosts to perform discovery when this node is started:
+# The default list of hosts is ["127.0.0.1", "[::1]"]
+#
+#discovery.seed_hosts: ["host1", "host2"]
+#
+# Bootstrap the cluster using an initial set of master-eligible nodes:
+#
+#cluster.initial_master_nodes: ["node-1", "node-2"]
+#
+# For more information, consult the discovery and cluster formation module documentation.
+#
+# ---------------------------------- Various -----------------------------------
+#
+# Allow wildcard deletion of indices:
+#
+#action.destructive_requires_name: false
+#----------------------- BEGIN SECURITY AUTO CONFIGURATION -----------------------
+#
+# The following settings, TLS certificates, and keys have been automatically      
+# generated to configure Elasticsearch security features on 02-04-2025 15:45:39
+#
+# --------------------------------------------------------------------------------
+# Enable security features
+xpack.security.enabled: false
+xpack.security.enrollment.enabled: false
+# Enable encryption for HTTP API client connections, such as Kibana, Logstash, and Agents
+xpack.security.http.ssl:
+  enabled: false
+  keystore.path: certs/http.p12
+# Enable encryption and mutual authentication between cluster nodes
+xpack.security.transport.ssl:
+  enabled: false
+  verification_mode: certificate
+  keystore.path: certs/transport.p12
+  truststore.path: certs/transport.p12
+# Create a new cluster with the current node only
+# Additional nodes can still join the cluster later
+cluster.initial_master_nodes: ["packer-67ed5627-475d-8373-5bba-592c1f1f289b"]
+# Allow HTTP API connections from anywhere
+# Connections are encrypted and require user authentication
+http.host: 0.0.0.0
+# Allow other nodes to join the cluster from anywhere
+# Connections are encrypted and mutually authenticated
+#transport.host: 0.0.0.0
+#----------------------- END SECURITY AUTO CONFIGURATION -------------------------
+EOL"
+  
   # Zwiększenie limitów systemowych
   - sudo sysctl -w vm.max_map_count=262144
   
-  # Napraw configuration.yml - bez wcięć na początku linii w dokumentach here 
+  # Zwiększenie pamięci JVM
   - |
-    sudo bash -c "cat > /etc/elasticsearch/elasticsearch.yml << EOL
-# Minimal Elasticsearch configuration for Travis CI
-cluster.name: travis-elasticsearch
-node.name: travis-elasticsearch-node
-
-# Network settings
-network.host: 127.0.0.1
-http.port: 9200
-
-# Discovery
-discovery.type: single-node
-
-# Disable security features
-xpack.security.enabled: false
-
-# Basic settings
-http.cors.enabled: true
-http.cors.allow-origin: \"*\"
-EOL"
-  
-  # Zwiększ pamięć JVM
-  - |
-    sudo bash -c "cat > /etc/elasticsearch/jvm.options.d/memory.options << EOL
+    sudo bash -c "cat > /etc/elasticsearch/jvm.options.d/memory.options << 'EOL'
 -Xms512m
 -Xmx512m
 EOL"
   
-  # Napraw uprawnienia
+  # Naprawienie uprawnień
   - sudo chown -R elasticsearch:elasticsearch /var/lib/elasticsearch
   - sudo chown -R elasticsearch:elasticsearch /var/log/elasticsearch
   
-  # Przeładuj usługi
+  # Przeładowanie i uruchomienie usługi
   - sudo systemctl daemon-reload
+  - sudo systemctl restart elasticsearch
   
-  # Spróbuj uruchomić usługę
-  - sudo systemctl restart elasticsearch || true
-  
-  # Sprawdź status
-  - sleep 3
+  # Sprawdzenie statusu
+  - sleep 5
   - sudo systemctl status elasticsearch || true
   
-  # Pokaż logi
-  - sudo cat /var/log/elasticsearch/travis-elasticsearch.log || true
-  
-  # Sprawdź czy działa
-  - curl -v http://localhost:9200 || echo "Elasticsearch nie odpowiada"
-  
-  # Czekaj na uruchomienie (z timeoutem 30s)
-  - timeout 30 bash -c 'until curl --silent -XGET --fail http://localhost:9200; do printf "."; sleep 3; done' || echo "Timeout podczas czekania na Elasticsearch"
+  # Oczekiwanie na uruchomienie Elasticsearch
+  - timeout 30 bash -c 'until curl --silent -XGET --fail http://localhost:9200; do printf "."; sleep 3; done' || echo "Timeout - nie udało się uruchomić Elasticsearch"
 
 script:
-  - echo "Test completed"
+  # Sprawdzenie czy Elasticsearch odpowiada
+  - curl -s http://localhost:9200
