--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ services:
   - elasticsearch  
 
 before_install:
-  - sudo cat /etc/elasticsearch/elasticsearch.yml
+  - 'sudo sed -i "s/enabled: true/enabled: false/g" /etc/elasticsearch/elasticsearch.yml'
+  - sudo systemctl restart elasticsearch
   - sleep 30
-  - until curl --silent -XGET --fail http://localhost:9200/_cluster/health?pretty; do printf '...\n'; sleep 2; done
-  - sudo cat /etc/elasticsearch/elasticsearch.yml
+  - until curl --silent -XGET --fail https://localhost:9200/_cluster/health?pretty; do printf '...\n'; sleep 2; done
 install: skip
 script: true
