--- a/.travis.yml
+++ b/.travis.yml
@@ -6,23 +6,37 @@ services:
   - elasticsearch
 
 before_install:
-  # Check Elasticsearch status
-  - ps aux | grep elasticsearch
-  - netstat -tulpn | grep 9200 || echo "Port 9200 is not open"
+  # Update Elasticsearch configuration for single-node operation
+  - sudo bash -c 'echo "discovery.type: single-node" >> /etc/elasticsearch/elasticsearch.yml'
+  - sudo bash -c 'echo "node.name: travis-test-node" >> /etc/elasticsearch/elasticsearch.yml'
+  - sudo bash -c 'echo "cluster.name: travis-test-cluster" >> /etc/elasticsearch/elasticsearch.yml'
   
-  # Check Elasticsearch logs
-  - sudo journalctl -u elasticsearch.service --no-pager || echo "Cannot get systemd logs"
-  - sudo cat /var/log/elasticsearch/elasticsearch.log || echo "Cannot access log file"
+  # Increase heap size (your current settings show only 128MB)
+  - sudo sed -i 's/-Xms128m/-Xms512m/' /etc/elasticsearch/jvm.options
+  - sudo sed -i 's/-Xmx128m/-Xmx512m/' /etc/elasticsearch/jvm.options
+  
+  # Restart Elasticsearch with new settings
+  - sudo systemctl restart elasticsearch
+  - sleep 30  # Give Elasticsearch more time to start with new settings
 
 script:
-  # Test checking Elasticsearch status with timeout
+  # Test Elasticsearch availability with diagnostics
   - |
-    MAX_RETRIES=10
+    MAX_RETRIES=15
     RETRY_COUNT=0
     until curl --silent -XGET --fail http://localhost:9200/_cluster/health?pretty || [ $RETRY_COUNT -eq $MAX_RETRIES ]; do
       echo "Attempt $RETRY_COUNT of $MAX_RETRIES - Elasticsearch still unavailable..."
+      
+      # Get more diagnostic info on each attempt
+      echo "Current error response:"
+      curl -s http://localhost:9200/_cluster/health
+      
+      # Check JVM memory status
+      echo "JVM memory status:"
+      curl -s http://localhost:9200/_nodes/stats/jvm | grep -A 10 "heap" || echo "Cannot access JVM stats"
+      
       RETRY_COUNT=$((RETRY_COUNT+1))
-      sleep 5
+      sleep 10
     done
     
     if [ $RETRY_COUNT -eq $MAX_RETRIES ]; then
@@ -30,15 +44,19 @@ script:
       exit 1
     else
       echo "Elasticsearch is working properly"
+      curl -s http://localhost:9200/_cat/nodes?v
+      curl -s http://localhost:9200/_cluster/health?pretty
     fi
-  
-  # Check system resources
-  - free -m
-  - df -h
-  - ulimit -a
 
 after_failure:
   # Additional diagnostics in case of failure
-  - sudo cat /var/log/elasticsearch/elasticsearch_deprecation.log || echo "Deprecation log file not found"
-  - sudo tail -n 100 /var/log/syslog || echo "Cannot access system logs"
-  - sudo systemctl status elasticsearch.service || echo "No status information available"
+  - echo "Current Elasticsearch configuration:"
+  - sudo grep -v "^#" /etc/elasticsearch/elasticsearch.yml | grep .
+  - echo "JVM options:"
+  - sudo grep -v "^#" /etc/elasticsearch/jvm.options | grep .
+  - echo "Recent logs:"
+  - sudo tail -n 200 /var/log/elasticsearch/elasticsearch.log
+  - echo "Memory usage:"
+  - free -m
+  - echo "Running processes (sorted by memory usage):"
+  - ps aux --sort=-%mem | head -n 15
