elasticsearch correct in gcp 11

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
   - elasticsearch
 
 before_install:
-  - sudo bash -c 'echo "discovery.type: single-node" >> /etc/elasticsearch/elasticsearch.yml'
+  - 'sudo bash -c "echo "discovery.type: single-node" >> /etc/elasticsearch/elasticsearch.yml'
   - sudo systemctl restart elasticsearch
   - sleep 20
 
