elasticsearch correct in gcp focal test

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,6 @@ services:
 
 before_install:
   - until curl --silent -XGET --fail http://localhost:9200/_cluster/health?pretty; do printf '...\n'; sleep 2; done
-install: skip
+install: 
+  - apt list --installed
 script: true
