elasticsearch fix docker

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: shell
 dist: focal
-group: dev
 
 
 services:
   - elasticsearch  
 
 before_install:
+  - sudo cat /etc/elasticsearch/elasticsearch.yml
   - until curl --silent -XGET --fail http://localhost:9200/_cluster/health?pretty; do printf '...\n'; sleep 2; done
 install: 
   - apt list --installed
